src/components/Footer/footer.css
.footer {
  background: #2d2b2f;
}

.footer__top-container {
  display: flex;
  gap: 292px;
  justify-content: center;

  padding: 48px 50px 44px 62px;
}

.footer__title {
  margin-bottom: 31px;

  font-weight: 500;
  font-size: 30px;
  color: #fff;
}

.footer__contact-item {
  display: flex;
  gap: 35px;
  align-items: start;
}

.footer__contact-item:not(:last-child) {
  margin-bottom: 29px;
}

.footer__contact-link {
  width: 30px;
  height: 30px;

  background-repeat: no-repeat;
}

.phone {
  background-image: url("../../assets/phone.svg");
}

.phone:focus,
.phone:hover {
  cursor: pointer;
  background-image: url("../../assets/phone-active.svg");
}

.mail {
  background-image: url("../../assets/mail.svg");
}

.mail:focus,
.mail:hover {
  background-image: url("../../assets/mail-active.svg");
}

.skype {
  background-image: url("../../assets/skype.svg");
}

.skype:focus,
.skype:hover {
  background-image: url("../../assets/skype-active.svg");
}

.map {
  background-image: url("../../assets/map.svg");
}

.map:focus,
.map:hover {
  background-image: url("../../assets/map-active.svg");
}

.footer__contact {
  font-weight: 400;
  font-size: 24px;
  color: #e5e5e5;
}

.footer__text {
  margin-bottom: 12px;

  font-weight: 400;
  font-size: 24px;
  color: #e5e5e5;
}

.subscribe-form {
  display: flex;
  gap: 33px;

  margin-bottom: 41px;
}

.subscribe-form__input {
  width: 447px;
  padding: 17px;

  font-weight: 400;
  font-size: 24px;
  color: #292929;
}

.subscribe-form__btn {
  padding: 17px 15px;
  border: 1px solid #fff;
  border-radius: 5px;

  font-weight: 400;
  font-size: 24px;
  text-transform: uppercase;
  color: #e5e5e5;
}

.subscribe-form__btn:focus,
.subscribe-form__btn:hover {
  border-color: #ffca62;
  color: #2d2b2f;
  background-color: #ffca62;
}

.subscribe-form__btn:active {
  border-color: #fff;
  color: #2d2b2f;
  background-color: #fff;
}

.footer__subscribe-list {
  display: flex;
}

.footer__subscribe-item:not(:last-child) {
  margin-right: 50px;
}

.footer__subscribe-link {
  height: 30px;
  background-repeat: no-repeat;
}

.youtube {
  width: 38px;
  background-image: url("../../assets/youtube.svg");
}

.youtube:focus,
.youtube:hover {
  background-image: url("../../assets/youtube-active.svg");
}

.linkedin {
  width: 31px;
  background-image: url("../../assets/linkedin.svg");
}

.linkedin:focus,
.linkedin:hover {
  background-image: url("../../assets/linkedin-active.svg");
}

.google {
  width: 47px;
  background-image: url("../../assets/google.svg");
}

.google:focus,
.google:hover {
  background-image: url("../../assets/google-active.svg");
}

.facebook {
  width: 14px;
  background-image: url("../../assets/facebook.svg");
}

.facebook:focus,
.facebook:hover {
  background-image: url("../../assets/facebook-active.svg");
}

.twitter {
  width: 37px;
  background-image: url("../../assets/twitter.svg");
}

.twitter:focus,
.twitter:hover {
  background-image: url("../../assets/twitter-active.svg");
}

.footer__bottom-container {
  display: flex;
  justify-content: space-between;
  align-items: center;

  padding: 27px 262px 36px 253px;

  border-top: 1px solid #e5e5e5;
}

.footer__up-link {
  width: 36px;
  height: 36px;

  background-image: url("../../assets/up.svg");
}

.footer__up-link:focus,
.footer__up-link:hover {
  cursor: pointer;
  background-image: url("../../assets/up-active.svg");
}

.footer__copyrights {
  font-weight: 300;
  font-size: 24px;
  color: #e5e5e5;
}

@media (max-width: 1330px) {
  .footer__top-container {
    justify-content: space-between;
    gap: 50px;

    padding: 50px;
  }

  .subscribe-form {
    flex-direction: column;
  }

  .footer__bottom-container {
    padding-left: 50px;
    padding-right: 50px;
  }
}

@media (max-width: 992px) {
  .subscribe-form__input {
    width: 300px;
  }

  .subscribe-form__btn {
    width: 300px;
  }

  .footer__subscribe-item:not(:last-child) {
    margin-right: 25px;
  }
}

